[package]
name = "uniswap-airdrop-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
ethers = { version = "1.0.2", features = ["ws", "rustls"] }
eyre = "0.6.8"
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
hex = "0.4.3"
chrono = { version = "0.4.24", features = ["serde"] }
